cmake_minimum_required(VERSION 3.5.0)
project(UltimatePlayer VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(wxWidgets_ROOT_DIR "C:/wxWidgets-3.3.1")
set(wxWidgets_LIB_DIR "${wxWidgets_ROOT_DIR}/lib/vc_x64_lib")
# find_package(wxWidgets REQUIRED COMPONENTS core base)
include_directories("${wxWidgets_ROOT_DIR}/include" "${wxWidgets_ROOT_DIR}/include/msvc" "include")
# include(${wxWidgets_USE_FILE})
add_definitions(-DUNICODE -D_UNICODE)
add_executable(UltimatePlayer WIN32 src/Player.cpp resources.rc)
target_link_directories(UltimatePlayer PRIVATE ${wxWidgets_LIB_DIR} "lib/libvlc")
target_link_libraries(UltimatePlayer ${wxWidgets_LIBRARIES} libvlc.lib libvlccore.lib wxmsw33ud_core.lib wxbase33ud.lib)
target_include_directories(UltimatePlayer PRIVATE ${wxWidgets_INCLUDE_DIRS})